bigraphspace/gen/bigraphspace/parser/antlr/BigraphTermParser.java
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 src/bigraphspace/parser/antlr/BigraphTerm.g 2009-07-30 16:45:21
 package bigraphspace.parser.antlr; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class BigraphTermParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BIGRAPH", "RULE", "WHERE", "AND", "IN", "NOT", "LENGTH", "MATCHES", "EMPTY", "PORTS", "CHILDREN", "ROOT", "UNNAMED", "CONTROL", "NODE", "ONEOF", "NOTONEOF", "CONSTRAINT", "MINLENGTH", "MAXLENGTH", "MINVALUE", "MAXVALUE", "REGEXP", "SUPPORT", "CLOSURES", "SUBSTITUTIONS", "ARROW", "DOT", "SLASH", "IDENTIFIER", "COMMA", "PIPE2", "PIPE", "LSQUARE", "NUMBER", "RSQUARE", "COLON", "LANGLE", "RANGLE", "STRING", "AT", "LBRACE", "RBRACE", "EQUALS", "LPAREN", "RPAREN", "LESSTHANOREQUAL", "GREATERTHANOREQUAL", "PLUS", "MINUS", "UNDERSCORE", "DOLLAR", "DIGIT", "NUMERAL", "STRING_ESCAPE", "LETTER", "WHITESPACE", "LINECOMMENT"
    };
    public static final int DOLLAR=55;
    public static final int WHERE=6;
    public static final int LSQUARE=37;
    public static final int STRING_ESCAPE=58;
    public static final int CHILDREN=14;
    public static final int LETTER=59;
    public static final int LANGLE=41;
    public static final int LBRACE=45;
    public static final int EQUALS=47;
    public static final int NOT=9;
    public static final int LINECOMMENT=61;
    public static final int BIGRAPH=4;
    public static final int AND=7;
    public static final int EOF=-1;
    public static final int LPAREN=48;
    public static final int LENGTH=10;
    public static final int AT=44;
    public static final int RPAREN=49;
    public static final int SLASH=32;
    public static final int IN=8;
    public static final int CLOSURES=28;
    public static final int MINVALUE=24;
    public static final int MATCHES=11;
    public static final int MAXVALUE=25;
    public static final int COMMA=34;
    public static final int IDENTIFIER=33;
    public static final int LESSTHANOREQUAL=50;
    public static final int REGEXP=26;
    public static final int PLUS=52;
    public static final int SUPPORT=27;
    public static final int PIPE=36;
    public static final int NOTONEOF=20;
    public static final int DIGIT=56;
    public static final int PIPE2=35;
    public static final int RANGLE=42;
    public static final int DOT=31;
    public static final int GREATERTHANOREQUAL=51;
    public static final int SUBSTITUTIONS=29;
    public static final int RBRACE=46;
    public static final int NODE=18;
    public static final int CONTROL=17;
    public static final int RULE=5;
    public static final int MINLENGTH=22;
    public static final int NUMBER=38;
    public static final int WHITESPACE=60;
    public static final int UNDERSCORE=54;
    public static final int MINUS=53;
    public static final int RSQUARE=39;
    public static final int ROOT=15;
    public static final int ONEOF=19;
    public static final int EMPTY=12;
    public static final int COLON=40;
    public static final int PORTS=13;
    public static final int UNNAMED=16;
    public static final int MAXLENGTH=23;
    public static final int ARROW=30;
    public static final int NUMERAL=57;
    public static final int CONSTRAINT=21;
    public static final int STRING=43;

    // delegates
    // delegators


        public BigraphTermParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public BigraphTermParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return BigraphTermParser.tokenNames; }
    public String getGrammarFileName() { return "src/bigraphspace/parser/antlr/BigraphTerm.g"; }


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "start"
    // src/bigraphspace/parser/antlr/BigraphTerm.g:44:1: start : ( BIGRAPH closures wide substitutions ( where )? EOF | RULE wide ARROW wide EOF );
    public final BigraphTermParser.start_return start() throws RecognitionException {
        BigraphTermParser.start_return retval = new BigraphTermParser.start_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token BIGRAPH1=null;
        Token EOF6=null;
        Token RULE7=null;
        Token ARROW9=null;
        Token EOF11=null;
        BigraphTermParser.closures_return closures2 = null;

        BigraphTermParser.wide_return wide3 = null;

        BigraphTermParser.substitutions_return substitutions4 = null;

        BigraphTermParser.where_return where5 = null;

        BigraphTermParser.wide_return wide8 = null;

        BigraphTermParser.wide_return wide10 = null;


        Object BIGRAPH1_tree=null;
        Object EOF6_tree=null;
        Object RULE7_tree=null;
        Object ARROW9_tree=null;
        Object EOF11_tree=null;

        try {
            // src/bigraphspace/parser/antlr/BigraphTerm.g:45:1: ( BIGRAPH closures wide substitutions ( where )? EOF | RULE wide ARROW wide EOF )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==BIGRAPH) ) {
                alt2=1;
            }
            else if ( (LA2_0==RULE) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // src/bigraphspace/parser/antlr/BigraphTerm.g:45:3: BIGRAPH closures wide substitutions ( where )? EOF
                    {
                    root_0 = (Object)adaptor.nil();

                    BIGRAPH1=(Token)match(input,BIGRAPH,FOLLOW_BIGRAPH_in_start260); 
                    BIGRAPH1_tree = (Object)adaptor.create(BIGRAPH1);
                    root_0 = (Object)adaptor.becomeRoot(BIGRAPH1_tree, root_0);

                    pushFollow(FOLLOW_closures_in_start263);
                    closures2=closures();

                    state._fsp--;

                    adaptor.addChild(root_0, closures2.getTree());
                    pushFollow(FOLLOW_wide_in_start265);
                    wide3=wide();

                    state._fsp--;

                    adaptor.addChild(root_0, wide3.getTree());
                    pushFollow(FOLLOW_substitutions_in_start267);
                    substitutions4=substitutions();

                    state._fsp--;

                    adaptor.addChild(root_0, substitutions4.getTree());
                    // src/bigraphspace/parser/antlr/BigraphTerm.g:45:40: ( where )?
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==WHERE) ) {
                        alt1=1;
                    }
                    switch (alt1) {
                        case 1 :
                            // src/bigraphspace/parser/antlr/BigraphTerm.g:45:40: where
                            {
                            pushFollow(FOLLOW_where_in_start269);
                            where5=where();

                            state._fsp--;

                            adaptor.addChild(root_0, where5.getTree());

                            }
                            break;

                    }

                    EOF6=(Token)match(input,EOF,FOLLOW_EOF_in_start272); 
                    EOF6_tree = (Object)adaptor.create(EOF6);
                    adaptor.addChild(root_0, EOF6_tree);


                    }
                    break;
                case 2 :
                    // src/bigraphspace/parser/antlr/BigraphTerm.g:46:3: RULE wide ARROW wide EOF
                    {
                    root_0 = (Object)adaptor.nil();

                    RULE7=(Token)match(input,RULE,FOLLOW_RULE_in_start276); 
                    RULE7_tree = (Object)adaptor.create(RULE7);
                    root_0 = (Object)adaptor.becomeRoot(RULE7_tree, root_0);

                    pushFollow(FOLLOW_wide_in_start279);
                    wide8=wide();

                    state._fsp--;

                    adaptor.addChild(root_0, wide8.getTree());
                    ARROW9=(Token)match(input,ARROW,FOLLOW_ARROW_in_start281); 
                    pushFollow(FOLLOW_wide_in_start284);
                    wide10=wide();

                    state._fsp--;

                    adaptor.addChild(root_0, wide10.getTree());
                    EOF11=(Token)match(input,EOF,FOLLOW_EOF_in_start286); 
                    EOF11_tree = (Object)adaptor.create(EOF11);
                    adaptor.addChild(root_0, EOF11_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "start"

    public static class closures_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "closures"
    // src/bigraphspace/parser/antlr/BigraphTerm.g:49:1: closures : ( closure DOT )* -> ^( CLOSURES ( closure )* ) ;
    public final BigraphTermParser.closures_return closures() throws RecognitionException {
        BigraphTermParser.closures_return retval = new BigraphTermParser.closures_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token DOT13=null;
        BigraphTermParser.closure_return closure12 = null;


        Object DOT13_tree=null;
        RewriteRuleTokenStream stream_DOT=new RewriteRuleTokenStream(adaptor,"token DOT");
        RewriteRuleSubtreeStream stream_closure=new RewriteRuleSubtreeStream(adaptor,"rule closure");
        try {
            // src/bigraphspace/parser/antlr/BigraphTerm.g:50:1: ( ( closure DOT )* -> ^( CLOSURES ( closure )* ) )
            // src/bigraphspace/parser/antlr/BigraphTerm.g:50:3: ( closure DOT )*
            {
            // src/bigraphspace/parser/antlr/BigraphTerm.g:50:3: ( closure DOT )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==SLASH) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // src/bigraphspace/parser/antlr/BigraphTerm.g:50:5: closure DOT
            	    {
            	    pushFollow(FOLLOW_closure_in_closures301);
            	    closure12=closure();

            	    state._fsp--;

            	    stream_closure.add(closure12.getTree());
            	    DOT13=(Token)match(input,DOT,FOLLOW_DOT_in_closures303);  
            	    stream_DOT.add(DOT13);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);



            // AST REWRITE
            // elements: closure
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 50:20: -> ^( CLOSURES ( closure )* )
            {
                // src/bigraphspace/parser/antlr/BigraphTerm.g:50:23: ^( CLOSURES ( closure )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CLOSURES, "CLOSURES"), root_1);

                // src/bigraphspace/parser/antlr/BigraphTerm.g:50:35: ( closure )*
                while ( stream_closure.hasNext() ) {
                    adaptor.addChild(root_1, stream_closure.nextTree());

                }
                stream_closure.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "closures"

    public static class substitutions_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "substitutions"
    // src/bigraphspace/parser/antlr/BigraphTerm.g:53:1: substitutions : ( DOT substitution )* -> ^( SUBSTITUTIONS ( substitution )* ) ;
    public final BigraphTermParser.substitutions_return substitutions() throws RecognitionException {
        BigraphTermParser.substitutions_return retval = new BigraphTermParser.substitutions_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token DOT14=null;
        BigraphTermParser.substitution_return substitution15 = null;


        Object DOT14_tree=null;
        RewriteRuleTokenStream stream_DOT=new RewriteRuleTokenStream(adaptor,"token DOT");
        RewriteRuleSubtreeStream stream_substitution=new RewriteRuleSubtreeStream(adaptor,"rule substitution");
        try {
            // src/bigraphspace/parser/antlr/BigraphTerm.g:54:1: ( ( DOT substitution )* -> ^( SUBSTITUTIONS ( substitution )* ) )
            // src/bigraphspace/parser/antlr/BigraphTerm.g:54:3: ( DOT substitution )*
            {
            // src/bigraphspace/parser/antlr/BigraphTerm.g:54:3: ( DOT substitution )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==DOT) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // src/bigraphspace/parser/antlr/BigraphTerm.g:54:5: DOT substitution
            	    {
            	    DOT14=(Token)match(input,DOT,FOLLOW_DOT_in_substitutions328);  
            	    stream_DOT.add(DOT14);

            	    pushFollow(FOLLOW_substitution_in_substitutions330);
            	    substitution15=substitution();

            	    state._fsp--;

            	    stream_substitution.add(substitution15.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);



            // AST REWRITE
            // elements: substitution
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 54:25: -> ^( SUBSTITUTIONS ( substitution )* )
            {
                // src/bigraphspace/parser/antlr/BigraphTerm.g:54:28: ^( SUBSTITUTIONS ( substitution )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(SUBSTITUTIONS, "SUBSTITUTIONS"), root_1);

                // src/bigraphspace/parser/antlr/BigraphTerm.g:54:45: ( substitution )*
                while ( stream_substitution.hasNext() ) {
                    adaptor.addChild(root_1, stream_substitution.nextTree());

                }
                stream_substitution.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "substitutions"

    public static class closure_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "closure"
    // src/bigraphspace/parser/antlr/BigraphTerm.g:57:1: closure : SLASH IDENTIFIER ( COMMA IDENTIFIER )* -> ^( SLASH UNDERSCORE ( IDENTIFIER )+ ) ;
    public final BigraphTermParser.closure_return closure() throws RecognitionException {
        BigraphTermParser.closure_return retval = new BigraphTermParser.closure_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token SLASH16=null;
        Token IDENTIFIER17=null;
        Token COMMA18=null;
        Token IDENTIFIER19=null;

        Object SLASH16_tree=null;
        Object IDENTIFIER17_tree=null;
        Object COMMA18_tree=null;
        Object IDENTIFIER19_tree=null;
        RewriteRuleTokenStream stream_SLASH=new RewriteRuleTokenStream(adaptor,"token SLASH");
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
        RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");

        try {
            // src/bigraphspace/parser/antlr/BigraphTerm.g:58:1: ( SLASH IDENTIFIER ( COMMA IDENTIFIER )* -> ^( SLASH UNDERSCORE ( IDENTIFIER )+ ) )
            // src/bigraphspace/parser/antlr/BigraphTerm.g:58:3: SLASH IDENTIFIER ( COMMA IDENTIFIER )*
            {
            SLASH16=(Token)match(input,SLASH,FOLLOW_SLASH_in_closure353);  
            stream_SLASH.add(SLASH16);

            IDENTIFIER17=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_closure355);  
            stream_IDENTIFIER.add(IDENTIFIER17);

            // src/bigraphspace/parser/antlr/BigraphTerm.g:58:20: ( COMMA IDENTIFIER )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // src/bigraphspace/parser/antlr/BigraphTerm.g:58:22: COMMA IDENTIFIER
            	    {
            	    COMMA18=(Token)match(input,COMMA,FOLLOW_COMMA_in_closure359);  
            	    stream_COMMA.add(COMMA18);

            	    IDENTIFIER19=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_closure361);  
            	    stream_IDENTIFIER.add(IDENTIFIER19);


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);



            // AST REWRITE
            // elements: SLASH, IDENTIFIER
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 58:42: -> ^( SLASH UNDERSCORE ( IDENTIFIER )+ )
            {
                // src/bigraphspace/parser/antlr/BigraphTerm.g:58:45: ^( SLASH UNDERSCORE ( IDENTIFIER )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_SLASH.nextNode(), root_1);

                adaptor.addChild(root_1, (Object)adaptor.create(UNDERSCORE, "UNDERSCORE"));
                if ( !(stream_IDENTIFIER.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_IDENTIFIER.hasNext() ) {
                    adaptor.addChild(root_1, stream_IDENTIFIER.nextNode());

                }
                stream_IDENTIFIER.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "closure"

    public static class substitution_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "substitution"
    // src/bigraphspace/parser/antlr/BigraphTerm.g:61:1: substitution : l= IDENTIFIER SLASH (r+= IDENTIFIER ( COMMA r+= IDENTIFIER )* )? -> ^( SLASH $l ( $r)* ) ;
    public final BigraphTermParser.substitution_return substitution() throws RecognitionException {
        BigraphTermParser.substitution_return retval = new BigraphTermParser.substitution_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token l=null;
        Token SLASH20=null;
        Token COMMA21=null;
        Token r=null;
        List list_r=null;

        Object l_tree=null;
        Object SLASH20_tree=null;
        Object COMMA21_tree=null;
        Object r_tree=null;
        RewriteRuleTokenStream stream_SLASH=new RewriteRuleTokenStream(adaptor,"token SLASH");
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
        RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");

        try {
            // src/bigraphspace/parser/antlr/BigraphTerm.g:62:1: (l= IDENTIFIER SLASH (r+= IDENTIFIER ( COMMA r+= IDENTIFIER )* )? -> ^( SLASH $l ( $r)* ) )
            // src/bigraphspace/parser/antlr/BigraphTerm.g:62:3: l= IDENTIFIER SLASH (r+= IDENTIFIER ( COMMA r+= IDENTIFIER )* )?
            {
            l=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_substitution388);  
            stream_IDENTIFIER.add(l);

            SLASH20=(Token)match(input,SLASH,FOLLOW_SLASH_in_substitution390);  
            stream_SLASH.add(SLASH20);

            // src/bigraphspace/parser/antlr/BigraphTerm.g:62:22: (r+= IDENTIFIER ( COMMA r+= IDENTIFIER )* )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==IDENTIFIER) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // src/bigraphspace/parser/antlr/BigraphTerm.g:62:24: r+= IDENTIFIER ( COMMA r+= IDENTIFIER )*
                    {
                    r=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_substitution396);  
                    stream_IDENTIFIER.add(r);

                    if (list_r==null) list_r=new ArrayList();
                    list_r.add(r);

                    // src/bigraphspace/parser/antlr/BigraphTerm.g:62:38: ( COMMA r+= IDENTIFIER )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==COMMA) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // src/bigraphspace/parser/antlr/BigraphTerm.g:62:40: COMMA r+= IDENTIFIER
                    	    {
                    	    COMMA21=(Token)match(input,COMMA,FOLLOW_COMMA_in_substitution400);  
                    	    stream_COMMA.add(COMMA21);

                    	    r=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_substitution404);  
                    	    stream_IDENTIFIER.add(r);

                    	    if (list_r==null) list_r=new ArrayList();
                    	    list_r.add(r);


                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);


                    }
                    break;

            }



            // AST REWRITE
            // elements: l, SLASH, r
            // token labels: l
            // rule labels: retval
            // token list labels: r
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_l=new RewriteRuleTokenStream(adaptor,"token l",l);
            RewriteRuleTokenStream stream_r=new RewriteRuleTokenStream(adaptor,"token r", list_r);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 62:66: -> ^( SLASH $l ( $r)* )
            {
                // src/bigraphspace/parser/antlr/BigraphTerm.g:62:69: ^( SLASH $l ( $r)* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_SLASH.nextNode(), root_1);

                adaptor.addChild(root_1, stream_l.nextNode());
                // src/bigraphspace/parser/antlr/BigraphTerm.g:62:81: ( $r)*
                while ( stream_r.hasNext() ) {
                    adaptor.addChild(root_1, stream_r.nextNode());

                }
                stream_r.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "substitution"

    public static class wide_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "wide"
    // src/bigraphspace/parser/antlr/BigraphTerm.g:66:1: wide : wide1 ( PIPE2 wide1 )* -> ( wide1 )+ ;
    public final BigraphTermParser.wide_return wide() throws RecognitionException {
        BigraphTermParser.wide_return retval = new BigraphTermParser.wide_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token PIPE223=null;
        BigraphTermParser.wide1_return wide122 = null;

        BigraphTermParser.wide1_return wide124 = null;


        Object PIPE223_tree=null;
        RewriteRuleTokenStream stream_PIPE2=new RewriteRuleTokenStream(adaptor,"token PIPE2");
        RewriteRuleSubtreeStream stream_wide1=new RewriteRuleSubtreeStream(adaptor,"rule wide1");
        try {
            // src/bigraphspace/parser/antlr/BigraphTerm.g:67:1: ( wide1 ( PIPE2 wide1 )* -> ( wide1 )+ )
            // src/bigraphspace/parser/antlr/BigraphTerm.g:67:3: wide1 ( PIPE2 wide1 )*
            {
            pushFollow(FOLLOW_wide1_in_wide435);
            wide122=wide1();

            state._fsp--;

            stream_wide1.add(wide122.getTree());
            // src/bigraphspace/parser/antlr/BigraphTerm.g:67:9: ( PIPE2 wide1 )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==PIPE2) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // src/bigraphspace/parser/antlr/BigraphTerm.g:67:11: PIPE2 wide1
            	    {
            	    PIPE223=(Token)match(input,PIPE2,FOLLOW_PIPE2_in_wide439);  
            	    stream_PIPE2.add(PIPE223);

            	    pushFollow(FOLLOW_wide1_in_wide441);
            	    wide124=wide1();

            	    state._fsp--;

            	    stream_wide1.add(wide124.getTree());

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);



            // AST REWRITE
            // elements: wide1
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
